--- a/index.ejs
+++ b/index.ejs
@@ -5,6 +5,22 @@
     <title></title>
   </head>
   <body>
-    <h1>hello world!</h1>
+    <% if (currentUser) {%>
+      <h1>WELCOME BACK <%= currentUser.username %></h1>
+      <a href="/log-out">LOG OUT</a>
+    <% } else { %>
+      <h1>please log in</h1>
+      <form action="/log-in" method="POST">
+        <label for="username">Username</label>
+        <input name="username" placeholder="username" type="text" />
+        <label for="password">Password</label>
+        <input name="password" type="password" />
+        <button>Log In</button>
+      </form>
+      <div>
+        <a href="/sign-up">Sign up</a>
+      </div>
+    <%}%>
+    </form>
   </body>
 </html>
